KIBON-1763: attempt to fix test crash